<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright 2017 Cognizant Technology Solutions Licensed under the Apache 
	License, Version 2.0 (the "License"); you may not use this file except in 
	compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
	Unless required by applicable law or agreed to in writing, software distributed 
	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
	the specific language governing permissions and limitations under the License. -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<!-- adding a comment to test poll -6 -->
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.cognizant.devops</groupId>
	<artifactId>PlatformParent</artifactId>
	<packaging>pom</packaging>
	<version>10.0</version>
	<name>PlatformParent</name>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>30.1.1-jre</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>PlatformCommons</module>
		<module>PlatformDAL</module>
		<module>PlatformAuditing</module>
		<module>PlatformService</module>
		<module>PlatformEngine</module>
		<module>PlatformWorkflow</module>
		<module>PlatformReports</module>
		<module>PlatformInsightsWebHook</module>
		<module>PlatformUI4</module>
		<module>PlatformDeployment/WebHookFaultTolerance/AWSLambdaFunctions/PlatformInsightsLambdaKinesis</module>
		<module>PlatformDeployment/WebHookFaultTolerance/AWSLambdaFunctions/PlatformInsightsLambdaRetrieval</module>
		<!--<module>PlatformDeployment/WebHookFaultTolerance/PlatformInsightsAzureWebhook</module> -->
		<module>PlatformRegressionTest</module>
		<module>PlatformTestReport</module>
	</modules>
	<build>		
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<inherited>true</inherited>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.3.2</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.scm</groupId>
						<artifactId>maven-scm-provider-gitexe</artifactId>
						<version>1.9.4</version>
					</dependency>
				</dependencies>
				<configuration>
					<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
				<executions>
				<execution>
					<id>prepare-agent</id>
					<goals>
					<goal>prepare-agent</goal>
					</goals>
				</execution>
				</executions>
			</plugin>			
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>NexusUpload</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-deploy-plugin</artifactId>
						<version>2.8.1</version>
						<executions>
							<execution>
								<id>default-deploy</id>
								<phase>deploy</phase>
								<goals>
									<goal>deploy</goal>
								</goals>
							</execution>
						</executions>

					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>RunCobertura</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>

			<reporting>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>cobertura-maven-plugin</artifactId>
						<version>2.7</version>
						<reportSets>
							<reportSet>
								<reports>
									<report>cobertura</report>
								</reports>
							</reportSet>
						</reportSets>
						<configuration>
							<check />
							<formats>
								<!--<format>html</format> -->
								<format>xml</format>
							</formats>
						</configuration>
					</plugin>
				</plugins>
			</reporting>
		</profile>
	</profiles>
</project>
